feat: add key prop functionality

--- a/test/e2e/custom-element/index.html
+++ b/test/e2e/custom-element/index.html
@@ -69,6 +69,9 @@
     <span slot="first" class="text-info">Marty McFly</span>
     <span slot="second" class="text-success">Doc Brown</span>
   </mock-slot-named>
+
+  <h2>Keys</h2>
+  <mock-key class="instance"></mock-key>
 </div>
 
 <script src="main.mjs" type="module"></script>
